--- a/catalog.html
+++ b/catalog.html
@@ -106,7 +106,7 @@
         </ul>
       <form class="filters" action="https://echo.htmlacademy.ru" method="post">
           <fieldset class="filter">
-            <legend class="filter__title">Фильтр:</legend>
+            <legend class="filter__title filter__title-main">Фильтр:</legend>
             <fieldset class="filter__cost">
               <legend class="filter__title-sort">Стоимость:</legend>
               <div class="range-filter">
@@ -125,44 +125,48 @@
             </fieldset>
             <fieldset class="filter__color">
               <legend class="filter__title-sort">Цвет:</legend>
-              <p class="filter__item-list">
-                <input class="visually-hidden filter-input-checkbox filter-input"
-                type="checkbox" id="color1" name="black" checked>
-                <label class="filter__item" for="color1">Чёрный</label>
-              </p>
-              <p class="filter__item-list">
-                <input class="visually-hidden filter-input-checkbox filter-input"
-                type="checkbox" id="color2" name="white">
-                <label class="filter__item" for="color2">Белый</label>
-              </p>
-              <p class="filter__item-list">
-                <input class="visually-hidden filter-input-checkbox filter-input"
-                type="checkbox" id="color3" name="blue" checked>
-                <label class="filter__item" for="color3">Синий</label>
-              </p>
-              <p class="filter__item-list">
-                <input class="visually-hidden filter-input-checkbox filter-input"
-                type="checkbox" id="color4" name="red" checked>
-                <label class="filter__item" for="color4">Красный</label>
-              </p>
-              <p class="filter__item-list">
-                <input class="visually-hidden filter-input-checkbox filter-input"
-                type="checkbox" id="color5" name="pink">
-                <label class="filter__item" for="color5">Розовый</label>
-              </p>
+              <ul class="filter__item-list">
+                <li>
+                  <input class="visually-hidden filter-input-checkbox filter-input"
+                         type="checkbox" id="color1" name="black" checked>
+                  <label class="filter__item" for="color1">Чёрный</label>
+                </li>
+                <li>
+                  <input class="visually-hidden filter-input-checkbox filter-input"
+                         type="checkbox" id="color2" name="white">
+                  <label class="filter__item" for="color2">Белый</label>
+                </li>
+                <li>
+                  <input class="visually-hidden filter-input-checkbox filter-input"
+                         type="checkbox" id="color3" name="blue" checked>
+                  <label class="filter__item" for="color3">Синий</label>
+                </li>
+                <li>
+                  <input class="visually-hidden filter-input-checkbox filter-input"
+                         type="checkbox" id="color4" name="red" checked>
+                  <label class="filter__item" for="color4">Красный</label>
+                </li>
+                <li>
+                  <input class="visually-hidden filter-input-checkbox filter-input"
+                         type="checkbox" id="color5" name="pink">
+                  <label class="filter__item" for="color5">Розовый</label>
+                </li>
+              </ul>
             </fieldset>
             <fieldset class="filter__bt">
               <legend class="filter__title-sort">Bluetooth:</legend>
-              <p class="filter__item-list">
-                <input class="visually-hidden filter-input-radio filter-input"
-                type="radio" id="b-yes" value="bluetooth-yes" name="filter-bluetooth" checked>
-                <label class="filter__item" for="b-yes">Есть</label>
-              </p>
-              <p class="filter__item-list">
-                <input class="visually-hidden filter-input-radio filter-input"
-                type="radio" id="b-no" value="bluetooth-тщ" name="filter-bluetooth">
-                <label class="filter__item" for="b-no">Нет</label>
-              </p>
+              <ul class="filter__item-list">
+                <li>
+                  <input class="visually-hidden filter-input-radio filter-input"
+                         type="radio" id="b-yes" value="bluetooth-yes" name="filter-bluetooth" checked>
+                  <label class="filter__item" for="b-yes">Есть</label>
+                </li>
+                <li>
+                  <input class="visually-hidden filter-input-radio filter-input"
+                         type="radio" id="b-no" value="bluetooth-тщ" name="filter-bluetooth">
+                  <label class="filter__item" for="b-no">Нет</label>
+                </li>
+              </ul>
             </fieldset>
             <button class="link link--btn-filter" type="submit">Показать</button>
           </fieldset>
