Добавил классов для стилизации карточки товара

--- a/catalog.html
+++ b/catalog.html
@@ -198,48 +198,64 @@
               <article class="product-card">
                 <img class="product-card__img" src="img/product_1.jpg" width="360" height="380"
                      alt="Любительская селфи палка. 1100 руб.">
-                <a class="link" href="#">В корзину</a>
-                <a class="product-card__comparison" href="#">Добавить к сравнению</a>
-                <a href="#">
-                  <h3 class="product-card__name">Любительская селфи палка</h3>
-                </a>
-                <a class="product-card__price" href="#">1 100 руб.</a>
+                <div class="product-card__wrapper">
+                  <a class="link" href="#">В корзину</a>
+                  <a class="product-card__comparison" href="#">Добавить к сравнению</a>
+                </div>
+                <div class="product-card__name-price">
+                  <a href="#">
+                    <h3 class="product-card__name">Любительская селфи палка</h3>
+                  </a>
+                  <a class="product-card__price" href="#">1 100 руб.</a>
+                </div>
               </article>
             </li>
           <li class="catalog-list__item">
               <article class="product-card">
                 <img class="product-card__img" src="img/product_2.jpg" width="360" height="380"
                      alt="Профессиональная селфи-палка. 1500 руб.">
-                <a class="link" href="#">В корзину</a>
-                <a class="product-card__comparison" href="#">Добавить к сравнению</a>
-                <a href="#">
-                  <h3 class="product-card__name">Профессиональная селфи-палка</h3>
-                </a>
-                <a class="product-card__price" href="#">1 500 руб.</a>
+                <div class="product-card__wrapper">
+                  <a class="link" href="#">В корзину</a>
+                  <a class="product-card__comparison" href="#">Добавить к сравнению</a>
+                </div>
+                <div class="product-card__name-price">
+                  <a href="#">
+                    <h3 class="product-card__name">Профессиональная<br> селфи-палка</h3>
+                  </a>
+                  <a class="product-card__price" href="#">1 500 руб.</a>
+                </div>
               </article>
             </li>
           <li class="catalog-list__item">
               <article class="product-card">
                 <img class="product-card__img" src="img/product_3.jpg" width="360" height="380"
                      alt="Непотопляемая селфи-палка. 1500 руб.">
-                <a class="link" href="#">В корзину</a>
-                <a class="product-card__comparison" href="#">Добавить к сравнению</a>
-                <a href="#">
-                  <h3 class="product-card__name">Непотопляемая селфи-палка</h3>
-                </a>
-                <a class="product-card__price" href="#">1 500 руб.</a>
+                <div class="product-card__wrapper">
+                  <a class="link" href="#">В корзину</a>
+                  <a class="product-card__comparison" href="#">Добавить к сравнению</a>
+                </div>
+                <div class="product-card__name-price">
+                  <a href="#">
+                    <h3 class="product-card__name">Непотопляемая селфи-палка</h3>
+                  </a>
+                  <a class="product-card__price" href="#">1 500 руб.</a>
+                </div>
               </article>
             </li>
           <li class="catalog-list__item">
               <article class="product-card">
                 <img class="product-card__img" src="img/product_4.jpg" width="360" height="380"
                      alt="Селфи-палка &laquo;Следуй за мной&raquo;. 1900 руб.">
-                <a class="link" href="#">В корзину</a>
-                <a class="product-card__comparison" href="#">Добавить к сравнению</a>
-                <a href="#">
-                  <h3 class="product-card__name">Непотопляемая селфи-палка</h3>
-                </a>
-                <a class="product-card__price" href="#">1 900 руб.</a>
+                <div class="product-card__wrapper">
+                  <a class="link" href="#">В корзину</a>
+                  <a class="product-card__comparison" href="#">Добавить к сравнению</a>
+                </div>
+                <div class="product-card__name-price">
+                  <a href="#">
+                    <h3 class="product-card__name">Непотопляемая селфи-палка</h3>
+                  </a>
+                  <a class="product-card__price" href="#">1 900 руб.</a>
+                </div>
               </article>
             </li>
         </ul>
