--- a/catalog.html
+++ b/catalog.html
@@ -49,32 +49,30 @@
           </div>
           <ul class="nav-menu">
             <li class="nav-menu__item">
-              <a class="nav-menu__link link-catalog" href="#">Каталог товаров</a>
               <div class="catalog-menu__submenu">
-                <ul class="catalog-menu">
-                  <li class="catalog-menu__item">
-                    <a class="catalog-menu__link" href="#">Вирутальная реальность</a>
-                  </li>
-                  <li class="catalog-menu__item">
-                    <a class="catalog-menu__link" href="#">Моноподы для селфи</a>
-                  </li>
-                  <li class="catalog-menu__item">
-                    <a class="catalog-menu__link" href="#">Экшн-камеры</a>
-                  </li>
-                </ul>
-                <ul class="catalog-menu">
-                  <li class="catalog-menu__item">
-                    <a class="catalog-menu__link" href="#">Фитнес браслеты</a>
-                  </li>
-                  <li class="catalog-menu__item">
-                    <a class="catalog-menu__link" href="#">Умные часы</a>
-                  </li>
-                </ul>
-                <ul class="catalog-menu">
-                  <li class="catalog-menu__item">
-                    <a class="catalog-menu__link" href="#">Квадрокоптер</a>
-                  </li>
-                </ul>
+                <a class="nav-menu__link link-catalog" href="#">Каталог товаров</a>
+                <section class="nav-menu__advanced">
+                  <ul class="catalog-menu">
+                    <li class="catalog-menu__item">
+                      <a class="catalog-menu__link" href="#">Вирутальная реальность</a>
+                    </li>
+                    <li class="catalog-menu__item">
+                      <a class="catalog-menu__link" href="#">Фитнес браслеты</a>
+                    </li>
+                    <li class="catalog-menu__item">
+                      <a class="catalog-menu__link" href="#">Квадрокоптер</a>
+                    </li>
+                    <li class="catalog-menu__item">
+                      <a class="catalog-menu__link" href="catalog.html">Моноподы для селфи</a>
+                    </li>
+                    <li class="catalog-menu__item">
+                      <a class="catalog-menu__link" href="#">Умные часы</a>
+                    </li>
+                    <li class="catalog-menu__item">
+                      <a class="catalog-menu__link" href="#">Экшн-камеры</a>
+                    </li>
+                  </ul>
+                </section>
               </div>
             </li>
             <li class="nav-menu__item">
@@ -310,13 +308,13 @@
           </a>
           <p class="address-footer">г. Москва, ул. Строителей, 15</p>
           <ul class="nav-menu nav-menu--low">
-            <li class="nav-menu__item nav-menu__item--low">
+            <li class="nav-menu__item--low">
               <a class="nav-menu__link nav-menu__link--low" href="#">Доставка</a>
             </li>
-            <li class="nav-menu__item nav-menu__item--low">
+            <li class="nav-menu__item--low">
               <a class="nav-menu__link nav-menu__link--low" href="#">Гарантия</a>
             </li>
-            <li class="nav-menu__item nav-menu__item--low">
+            <li class="nav-menu__item--low">
               <a class="nav-menu__link nav-menu__link--low" href="#">Контакты</a>
             </li>
           </ul>
