Модальное окно Карты

--- a/index.html
+++ b/index.html
@@ -412,6 +412,12 @@
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </section>
 
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Мы находимся по адресу г. Москва, ул. Строителей, 15</h2>
+      <iframe class="modal-map-yandex" src="https://yandex.ru/map-widget/v1/-/CCUQBFQt2A" width="960" height="550"></iframe>
+      <button class="modal-close" type="button" aria-label="Закрыть"></button>
+    </section>
+
   </body>
 </html>
 
