Изменил\Добавил классов

--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
       </div>
     </footer>
 
-    <section class="modal modal-login">
+    <section class="modal modal-write-us">
       <h2 class="visually-hidden">Напишите нам если у Вас остались вопросы!</h2>
       <div class="modal-wrapper">
-        <form action="https://echo.htmlacademy.ru" method="post">
+        <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
           <fieldset class="write-us">
             <legend class="visually-hidden">Форма обратной связи</legend>
             <ul class="write-us-list">
@@ -400,7 +400,7 @@
                 <label for="user-email">Ваше e-mail:</label>
                 <input class="email-user" type="email" id="user-email" placeholder="email@example.com">
               </li>
-              <li class="test">
+              <li class="write-us__massage">
                 <label for="user-massage">Текст письма:</label>
                 <textarea class="massage-user" id="user-massage" placeholder="В свободной форме"></textarea>
               </li>
@@ -417,6 +417,8 @@
       <iframe class="modal-map-yandex" src="https://yandex.ru/map-widget/v1/-/CCUQBFQt2A" width="960" height="550"></iframe>
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </section>
+
+  <script src="js/main.js"></script>
 
   </body>
 </html>
