--- a/catalog.html
+++ b/catalog.html
@@ -380,7 +380,7 @@
                 <label for="user-email">Ваше e-mail:</label>
                 <input class="email-user" type="email" id="user-email" placeholder="email@example.com">
               </li>
-              <li class="test">
+              <li class="write-us__massage">
                 <label for="user-massage">Текст письма:</label>
                 <textarea class="massage-user" id="user-massage" placeholder="В свободной форме"></textarea>
               </li>
